trunk/Archive2/21/35fcfaccf7640a/output
clang: SUCCESS
main.cpp: In constructor 'constexpr A::A()':
main.cpp:4:19: error: the value of 'x' is not usable in a constant expression
   constexpr A () {}
                   ^
main.cpp:1:18: note: 'x' was not initialized with a constant expression
 extern const int x;
                  ^
main.cpp: In function 'int main()':
main.cpp:11:15: error: 'constexpr A::A()' called in a constant expression
   constexpr A a;
               ^
